# ray_otami

./: .gitignore  Cargo.toml  README.md  minimal.comp  shapes.ron  shapes_alt.ron
src/: collector.frag  collector.vert  error_extra.rs  main.rs  marcher.comp  painter.comp  pixel_drawer.rs  shader.wgsl  world.rs
