[package]
name = "ray_otami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.3"
cgmath = { version = "0.18.0", features = ["serde"] }
color-eyre = "0.6.0"
futures = "0.3.18"
winit = "0.26.0"
wgpu = {version = "0.11.0", features = ["spirv"]}
env_logger = "0.9"
rayon = "1.5.1"
rand = "0.8.4"
rand_distr = "0.4.2"
serde = { version = "1.0.136", features = ["derive"] }
ron = "0.7.0"
